test/libsolidity/syntaxTests/constructor/constructor_without_implementation_new.sol
contract C {
	constructor();
}
// ----
// TypeError: (14-28): Constructor must be implemented if declared.
